--- a/spring-exp-01-basic/pom.xml
+++ b/spring-exp-01-basic/pom.xml
@@ -14,6 +14,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <org.springframework.version>5.2.1.RELEASE</org.springframework.version>
+        <log4j.version>2.12.1</log4j.version>
     </properties>
 
     <dependencies>
@@ -25,6 +26,21 @@
         </dependency>
 
         <!--log-->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
 
         <!--test-->
         <dependency>
