--- a/spring-exp-01-basic/pom.xml
+++ b/spring-exp-01-basic/pom.xml
@@ -25,6 +25,19 @@
             <version>${org.springframework.version}</version>
         </dependency>
 
+        <!-- database -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+
+
         <!--log-->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
