--- a/spring-exp-01-basic/pom.xml
+++ b/spring-exp-01-basic/pom.xml
@@ -25,7 +25,7 @@
             <version>${org.springframework.version}</version>
         </dependency>
 
-        <!-- database -->
+        <!-- database - h2 and jdbc -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -37,6 +37,17 @@
             <version>${org.springframework.version}</version>
         </dependency>
 
+        <!--database - mybatis-->
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>2.0.3</version>
+        </dependency>
 
         <!--log-->
         <dependency>
